--- a/src/hepattn/experiments/atlas_muon/configs/NGT/atlas_muon_tracking_NGT.yaml
+++ b/src/hepattn/experiments/atlas_muon/configs/NGT/atlas_muon_tracking_NGT.yaml
@@ -8,15 +8,16 @@ data:
   val_dir: /shared/tracking/data/ml_validation_data_150K_processed
   test_dir: /eos/user/j/jorenusc/tracking/data_gen/ml_test_data_150K_processed
 
-  hit_eval_train: /shared/tracking/dat/1_5Mio_test_training/epoch=049-val_acc=0.99711_ml_training_data_1_2Mio_processed_eval.h5
+  hit_eval_train: /shared/tracking/data/1_5Mio_test_training/epoch=049-val_acc=0.99711_ml_training_data_1_2Mio_processed_eval.h5
   hit_eval_val: /shared/tracking/data/1_5Mio_test_training/epoch=049-val_acc=0.99711_ml_validation_data_150K_processed_eval.h5
   # hit_eval_test: /home/iwsatlas1/jrenusch/master_thesis/tracking/data/HC-v3_20250622-T103156/ckpts/epoch=046-val_acc=0.96694_test_data_eval.h5
   
-  num_workers: 300
+  num_workers: 
   num_train: -1
   num_test: -1
   num_val: -1
   batch_size: 400
+  # batch_size: 32
   # use_smart_batching: false  # Disable smart batching as requested
 
   # ATLAS muon data parameters
@@ -43,6 +44,7 @@ data:
       - spacePoint_layer
       - spacePoint_stationPhi
       - spacePoint_stationEta
+      - spacePoint_stationIndex
       - spacePoint_technology
       # Add derived hit fields
       - r  # Radial distance
@@ -63,8 +65,8 @@ trainer:
   # Training stuff here
   max_epochs: 50
   accelerator: gpu
-  # devices: [2, 3]
-  devices: -1
+  devices: [1]
+  # devices: -1
   precision: bf16-mixed
   log_every_n_steps: 50 
   default_root_dir: logs
@@ -171,6 +173,7 @@ model:
                   - spacePoint_stationPhi
                   - spacePoint_stationEta
                   - spacePoint_technology
+                  - spacePoint_stationIndex
                   # # Add derived hit fields
                   - r  # Radial distance
                   - s  # 3D distance
@@ -179,7 +182,7 @@ model:
                 net:
                   class_path: hepattn.models.Dense
                   init_args:
-                    input_size: 21
+                    input_size: 22
                     output_size: *dim
                 posenc:
                   class_path: hepattn.models.posenc.FourierPositionEncoder
