--- a/src/hepattn/experiments/atlas_muon/configs/atlas_muon_tracking_debugging_speed.yaml
+++ b/src/hepattn/experiments/atlas_muon/configs/atlas_muon_tracking_debugging_speed.yaml
@@ -1,14 +1,14 @@
 seed_everything: 42
 name: TRK-v0-full
 # ckpt_path: /home/iwsatlas1/jrenusch/master_thesis/tracking/hepattn_muon/logs/TRK-v0-full_20250630-T152409/ckpts/epoch=029-val_loss=0.61685.ckpt
-ckpt_path: /home/iwsatlas1/jrenusch/master_thesis/tracking/hepattn_muon/src/logs/TRK-v0-full_20250820-T163706/ckpts/epoch=007-val_loss=18.58578.ckpt
+# ckpt_path: /home/iwsatlas1/jrenusch/master_thesis/tracking/hepattn_muon/src/logs/TRK-v0-full_20250820-T163706/ckpts/epoch=007-val_loss=18.58578.ckpt
 data:
   
-  train_dir: /home/iwsatlas1/jrenusch/master_thesis/tracking/data/root/train_PU200_processed
+  train_dir: /home/iwsatlas1/jrenusch/master_thesis/tracking/data/root/ml_training_data_1_2Mio_processed
   val_dir: /home/iwsatlas1/jrenusch/master_thesis/tracking/data/root/valid_PU200_processed
   test_dir: /home/iwsatlas1/jrenusch/master_thesis/tracking/data/root/test_PU200_processed
 
-  hit_eval_train: /home/iwsatlas1/jrenusch/master_thesis/tracking/hepattn_muon/logs/ATLAS-Muon-v1_20250814-T223545/ckpts/epoch=049-val_acc=0.99711_train_PU200_processed_eval.h5
+  hit_eval_train: /home/iwsatlas1/jrenusch/master_thesis/tracking/data/root/epoch=049-val_acc=0.99711_ml_training_data_1_2Mio_processed_eval.h5
   hit_eval_val: /home/iwsatlas1/jrenusch/master_thesis/tracking/hepattn_muon/logs/ATLAS-Muon-v1_20250814-T223545/ckpts/epoch=049-val_acc=0.99711_valid_PU200_processed_eval.h5
   # hit_eval_test: /home/iwsatlas1/jrenusch/master_thesis/tracking/data/HC-v3_20250622-T103156/ckpts/epoch=046-val_acc=0.96694_test_data_eval.h5
   
