recovered h5 data DataLoading validation plots

--- a/src/hepattn/experiments/atlas_muon/configs/atlas_muon_event_plotting.yaml
+++ b/src/hepattn/experiments/atlas_muon/configs/atlas_muon_event_plotting.yaml
@@ -54,6 +54,7 @@ data:
       - truthMuon_eta
       - truthMuon_phi
       - truthMuon_q
+      - truthMuon_qpt
 
 trainer:
   # Training configuration
