--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,6 +5,7 @@ repos:
       - id: ruff
         args: [--fix, --exit-non-zero-on-fix]
       - id: ruff-format
+        types: [python]
 
   - repo: https://github.com/adrienverge/yamllint.git
     rev: v1.32.0
