--- a/src/hepattn/experiments/atlas_muon/configs/NGT/atlas_muon_filtering_NGT.yaml
+++ b/src/hepattn/experiments/atlas_muon/configs/NGT/atlas_muon_filtering_NGT.yaml
@@ -1,6 +1,5 @@
 seed_everything: 42
 name: ATLAS-Muon-v1
-
 # ckpt_path: /home/iwsatlas1/jrenusch/master_thesis/tracking/hepattn_muon/logs/ATLAS-Muon-v1_20250814-T223545/ckpts/epoch=049-val_acc=0.99711.ckpt
 data:
   # class_path: hepattn.experiments.atlas_muon.data.AtlasMuonDataModule
@@ -8,18 +7,16 @@ data:
   # test_dir: /home/iwsatlas1/jrenusch/master_thesis/tracking/data/root/train_PU200_processed
   # test_dir: /home/iwsatlas1/jrenusch/master_thesis/tracking/data/root/valid_PU200_processed
   # train_dir: /home/iwsatlas1/jrenusch/master_thesis/tracking/data/root/ml_training_data_multi_processed
-  # train_dir: /home/iwsatlas1/jrenusch/master_thesis/tracking/data/root/train_PU200_processed
-  # val_dir: /home/iwsatlas1/jrenusch/master_thesis/tracking/data/root/valid_PU200_processed
-  train_dir: /shared/tracking/data/ml_training_data_1_2Mio_processed
-  val_dir: /shared/tracking/data/ml_validation_data_150K_processed
-  test_dir: /eos/user/j/jorenusc/tracking/data_gen/ml_test_data_150K_processed
+  # train_dir: /shared/tracking/data/ml_training_data_1_2Mio_processed
+  # val_dir: /shared/tracking/data/ml_validation_data_150K_processed
+  train_dir: /scratch/ml_training_data_1_2Mio_processed
+  val_dir: /scratch/ml_validation_data_150K_processed
 
-  num_workers: 20
-  num_train: -1
-  num_val: -1
+  num_workers: 100
+  num_train: 100
+  num_val: 100
   num_test: -1
-  # batch_size: 2
-  batch_size: 40
+  batch_size: 16  # Start with batch_size=1 to avoid smart batching issues
   # use_smart_batching: false  # Disable smart batching as requested
 
   # ATLAS muon data parameters
@@ -66,8 +63,10 @@ data:
 trainer:
   # Training configuration
   max_epochs: 50
+  num_sanity_val_steps: 1
   accelerator: gpu
-  devices: [1]
+  devices: [0]
+  # devices: -1
   precision: bf16-mixed
   log_every_n_steps: 50
   default_root_dir: logs
@@ -86,14 +85,14 @@ trainer:
     - class_path: hepattn.callbacks.SaveConfig
     - class_path: hepattn.callbacks.Checkpoint
       init_args:
-        monitor: val/acc
+        monitor: val/auc
         mode: max
         save_top_k: 1
     - class_path: hepattn.callbacks.PredictionWriter
       init_args:
         write_inputs: false
-        write_outputs: false
-        write_preds: True
+        write_outputs: true
+        write_preds: true
         write_targets: false
         write_losses: false
     - class_path: lightning.pytorch.callbacks.LearningRateMonitor
@@ -102,7 +101,7 @@ trainer:
         refresh_rate: 50
     - class_path: lightning.pytorch.callbacks.EarlyStopping
       init_args:
-        monitor: val/acc
+        monitor: val/auc
         patience: 15 
         min_delta: 0.0
         mode: max
@@ -159,7 +158,7 @@ model:
                 net:
                   class_path: hepattn.models.Dense
                   init_args:
-                    input_size: 22 # Number of input features for ATLAS muon data
+                    input_size: 22  # Number of input features for ATLAS muon data
                     output_size: &dim 256
                     norm_input: true
                 posenc:
@@ -168,7 +167,6 @@ model:
                     input_name: hit
                     fields:
                       - phi
-                      - r
                     # TODO: Check wether you might want to add more here
                     dim: *dim
                     scale: 0.1
@@ -181,6 +179,7 @@ model:
           window_size: 512  # Smaller window size for fewer hits per event
           window_wrap: true
           hybrid_norm: true
+          # norm: RMSNorm
           attn_kwargs:
             num_heads: 16
 
