--- a/src/hepattn/experiments/atlas_muon/configs/NGT/atlas_muon_tracking_NGT.yaml
+++ b/src/hepattn/experiments/atlas_muon/configs/NGT/atlas_muon_tracking_NGT.yaml
@@ -3,20 +3,20 @@ name: TRK-v0-full
 # ckpt_path: /home/iwsatlas1/jrenusch/master_thesis/tracking/hepattn_muon/logs/TRK-v0-full_20250630-T152409/ckpts/epoch=029-val_loss=0.61685.ckpt
 
 data:
-  
-  train_dir: /shared/tracking/data/ml_training_data_1_2Mio_processed
-  val_dir: /shared/tracking/data/ml_validation_data_150K_processed
-  test_dir: /eos/user/j/jorenusc/tracking/data_gen/ml_test_data_150K_processed
 
-  hit_eval_train: /shared/tracking/data/1_5Mio_test_training/epoch=049-val_acc=0.99711_ml_training_data_1_2Mio_processed_eval.h5
-  hit_eval_val: /shared/tracking/data/1_5Mio_test_training/epoch=049-val_acc=0.99711_ml_validation_data_150K_processed_eval.h5
+  train_dir: /scratch/ml_training_data_1_2Mio_processed
+  val_dir: /scratch/ml_validation_data_150K_processed
+  test_dir: /scratch/user/j/jorenusc/tracking/data_gen/ml_test_data_150K_processed
+
+  hit_eval_train: /scratch/epoch=049-val_acc=0.99711_ml_training_data_1_2Mio_processed_eval.h5
+  hit_eval_val: /scratch/epoch=049-val_acc=0.99711_ml_validation_data_150K_processed_eval.h5
   # hit_eval_test: /home/iwsatlas1/jrenusch/master_thesis/tracking/data/HC-v3_20250622-T103156/ckpts/epoch=046-val_acc=0.96694_test_data_eval.h5
   
-  num_workers: 
+  num_workers: 100
   num_train: -1
   num_test: -1
   num_val: -1
-  batch_size: 400
+  batch_size: 300
   # batch_size: 32
   # use_smart_batching: false  # Disable smart batching as requested
 
