--- a/src/hepattn/experiments/atlas_muon/configs/NGT/atlas_muon_filtering_NGT_inference.yaml
+++ b/src/hepattn/experiments/atlas_muon/configs/NGT/atlas_muon_filtering_NGT_inference.yaml
@@ -1,23 +1,22 @@
 seed_everything: 42
-name: ATLAS-Muon-v1
-ckpt_path: /eos/user/j/jorenusc/tracking/data_gen/1_5Mio_test_training/epoch=049-val_acc=0.99711.ckpt
+name: ATLAS-Muon-Inference
+ckpt_path: /shared/tracking/hepattn_muon/src/logs/ATLAS-Muon-6H100-600K_20250831-T195418/ckpts/epoch=021-val_auc=0.99969.ckpt
 data:
   # class_path: hepattn.experiments.atlas_muon.data.AtlasMuonDataModule
 
+  # test_dir: /scratch/ml_training_data_2694000_hdf5
+  # test_dir: /scratch/ml_validation_data_144000_hdf5
+  test_dir: /scratch/ml_test_data_156000_hdf5
 
-  test_dir: /shared/tracking/data/ml_training_data_1_2Mio_processed
-  # test_dir: /eos/user/j/jorenusc/tracking/data_gen/ml_validation_data_150K_processed
-  # test_dir: /shared/tracking/data/ml_test_data_150K_processed
-  # test_dir: /eos/user/j/jorenusc/tracking/data_gen/ml_test_data_150K_processed
 
-  train_dir: /shared/tracking/data/ml_training_data_1_2Mio_processed
-  val_dir: /shared/tracking/data/ml_test_data_150K_processed
+  train_dir: /scratch/ml_training_data_2694000_hdf5
+  val_dir: /scratch/ml_validation_data_144000_hdf5
 
-  num_workers: 200
+  num_workers: 100
   num_train: -1
   num_val: -1
   num_test: -1
-  batch_size: 1
+  batch_size: 1  # Start with batch_size=1 to avoid smart batching issues
   # use_smart_batching: false  # Disable smart batching as requested
 
   # ATLAS muon data parameters
@@ -45,7 +44,7 @@ data:
       - spacePoint_layer
       - spacePoint_stationPhi
       - spacePoint_stationEta
-      # - spacePoint_stationIndex
+      - spacePoint_stationIndex
       - spacePoint_technology
       # Add derived hit fields
       - r  # Radial distance
@@ -63,11 +62,13 @@ data:
 
 trainer:
   # Training configuration
-  max_epochs: 80
+  max_epochs: 50
+  num_sanity_val_steps: 1
   accelerator: gpu
   devices: [0]
+  # devices: -1
   precision: bf16-mixed
-  log_every_n_steps: 10
+  log_every_n_steps: 50
   default_root_dir: logs
   gradient_clip_val: 1.0
   enable_progress_bar: True
@@ -84,23 +85,23 @@ trainer:
     - class_path: hepattn.callbacks.SaveConfig
     - class_path: hepattn.callbacks.Checkpoint
       init_args:
-        monitor: val/acc
+        monitor: val/loss
         mode: max
-        save_top_k: 1
+        save_top_k: 5
     - class_path: hepattn.callbacks.PredictionWriter
       init_args:
         write_inputs: false
-        write_outputs: false
+        write_outputs: true
         write_preds: True
         write_targets: false
         write_losses: false
     - class_path: lightning.pytorch.callbacks.LearningRateMonitor
     - class_path: lightning.pytorch.callbacks.TQDMProgressBar
       init_args:
-        refresh_rate: 10
+        refresh_rate: 50
     - class_path: lightning.pytorch.callbacks.EarlyStopping
       init_args:
-        monitor: val/acc
+        monitor: val/loss
         patience: 15 
         min_delta: 0.0
         mode: max
@@ -148,6 +149,7 @@ model:
                   - spacePoint_stationPhi
                   - spacePoint_stationEta
                   - spacePoint_technology
+                  - spacePoint_stationIndex
                   # Add derived hit fields
                   - r  # Radial distance
                   - s  # 3D distance
@@ -156,7 +158,7 @@ model:
                 net:
                   class_path: hepattn.models.Dense
                   init_args:
-                    input_size: 21  # Number of input features for ATLAS muon data
+                    input_size: 22  # Number of input features for ATLAS muon data
                     output_size: &dim 256
                     norm_input: true
                 posenc:
@@ -165,7 +167,6 @@ model:
                     input_name: hit
                     fields:
                       - phi
-                      # - r
                     # TODO: Check wether you might want to add more here
                     dim: *dim
                     scale: 0.1
@@ -178,7 +179,9 @@ model:
           window_size: 512  # Smaller window size for fewer hits per event
           window_wrap: true
           hybrid_norm: true
-          hybrid_norm: true
+          # norm: RMSNorm
+          attn_kwargs:
+            num_heads: 16
 
       tasks:
         class_path: torch.nn.ModuleList
@@ -190,5 +193,5 @@ model:
                 input_object: hit
                 target_field: on_valid_particle
                 dim: *dim
-                threshold: 0.1
+                threshold: 0.01
                 loss_fn: bce
