--- a/src/hepattn/experiments/atlas_muon/configs/NGT/atlas_muon_filtering_NGT_small_inference.yaml
+++ b/src/hepattn/experiments/atlas_muon/configs/NGT/atlas_muon_filtering_NGT_small_inference.yaml
@@ -1,6 +1,6 @@
 seed_everything: 42
 name: ATLAS-Muon-small
-# ckpt_path: /shared/tracking/hepattn_muon/src/logs/ATLAS-Muon-small_20250907-T121140/ckpts/epoch=023-val_loss=0.00437.ckpt
+ckpt_path: /scratch/epoch=041-val_loss=0.00402.ckpt
 data:
   # class_path: hepattn.experiments.atlas_muon.data.AtlasMuonDataModule
 
@@ -9,14 +9,18 @@ data:
   # train_dir: /home/iwsatlas1/jrenusch/master_thesis/tracking/data/root/ml_training_data_multi_processed
   # train_dir: /shared/tracking/data/ml_training_data_1_2Mio_processed
   # val_dir: /shared/tracking/data/ml_validation_data_150K_processed
-  train_dir: /scratch/ml_training_data_2694000_hdf5
-  val_dir: /scratch/ml_validation_data_144000_hdf5
+  test_dir: /scratch/ml_test_data_156000_hdf5
+  # test_dir: /scratch/ml_training_data_2694000_hdf5
+  # test_dir: /scratch/ml_validation_data_144000_hdf5
+
+  train_dir: /scratch/ml_test_data_156000_hdf5
+  val_dir: /scratch/ml_test_data_156000_hdf5
 
   num_workers: 100
   num_train: -1
   num_val: -1
   num_test: -1
-  batch_size: 60  # Start with batch_size=1 to avoid smart batching issues
+  batch_size: 1  # Start with batch_size=1 to avoid smart batching issues
   # use_smart_batching: false  # Disable smart batching as requested
 
   # ATLAS muon data parameters
@@ -65,9 +69,7 @@ trainer:
   max_epochs: 50
   num_sanity_val_steps: 1
   accelerator: gpu
-  # devices: [0, 1]
-  devices: [1,2,3,4,5,6,7]
-  # devices: -1
+  devices: [0]
   precision: bf16-mixed
   log_every_n_steps: 50
   default_root_dir: logs
@@ -92,7 +94,7 @@ trainer:
     - class_path: hepattn.callbacks.PredictionWriter
       init_args:
         write_inputs: false
-        write_outputs: false
+        write_outputs: True
         write_preds: True
         write_targets: false
         write_losses: false
