some minor updates

--- a/src/hepattn/experiments/atlas_muon/configs/NGT/smallCuts/atlas_muon_filtering_NGT_small.yaml
+++ b/src/hepattn/experiments/atlas_muon/configs/NGT/smallCuts/atlas_muon_filtering_NGT_small.yaml
@@ -73,7 +73,7 @@ trainer:
 
   # Specify loggers here
   logger:
-    class_path: hepattn.utils.loggers.MyCometLogger
+    class_path: hepattn.utils.loggers.CometLogger
     init_args:
       project_name: atlas_muon_filtering
 
